@@ -26,7 +26,7 @@ public class ContactController {
     public List<Contact> saveContactInquiryDetails(@RequestBody List<Contact> contacts) {
         List<Contact> returnContacts = new ArrayList<>();
         if(!contacts.isEmpty()) {
-            Contact contact = contacts.getFirst();
+            Contact contact = contacts.get(0);
             contact.setContactId(getServiceReqNumber());
             contact.setCreateDt(new Date(System.currentTimeMillis()));
             Contact savedContact = contactRepository.save(contact);
